@@ -1109,7 +1109,7 @@
       <component name="gnome-desktop" dir="gnome-desktop" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-desktop-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-12"/>
         <regenerate/>
         <download/>
       </component>
@@ -1565,7 +1565,7 @@
       <component name="gnome-terminal" dir="gnome-terminal" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-terminal.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-12"/>
         <regenerate/>
         <download/>
       </component>
@@ -2126,7 +2126,7 @@
       <component name="libgnome" dir="libgnome" group="developer-libs">
         <podir dir="po"/>
         <potname name="libgnome-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-12"/>
         <regenerate/>
         <download/>
       </component>
@@ -2146,7 +2146,7 @@
       <component name="libgnomecanvas" dir="libgnomecanvas" group="developer-libs">
         <podir dir="po"/>
         <potname name="libgnomecanvas-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-12"/>
         <regenerate/>
         <download/>
       </component>
@@ -2239,7 +2239,7 @@
       <component name="libgnomeui" dir="libgnomeui" group="developer-libs">
         <podir dir="po"/>
         <potname name="libgnomeui-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-12"/>
         <regenerate/>
         <download/>
       </component>
