@@ -1,3 +1,8 @@
+2005-09-07  Danilo Šegan  <danilo@gnome.org>
+
+	* translation-status.xml: gnome-desktop, libgnome, libgnomecanvas,
+	libgnomeui, gnome-terminal branched.
+
 2005-09-05  Danilo Šegan  <danilo@gnome.org>
 
 	* translation-status.xml: gnomemeeting branched.
